--- a/samples/python_interop/qiskit/interop.ipynb
+++ b/samples/python_interop/qiskit/interop.ipynb
@@ -17,27 +17,7 @@
         "\n",
         "This core enable integration and local resource estimation without relying on external tools. Users are able to estimate resources for their Qiskit circuits locally (see the [resource estimation with Qiskit sample notebook](../../estimation/estimation-qiskit.ipynb)), leveraging the Q# compiler's capabilities for analysis, transformation, code generation, and simulation. This also enables the generation of QIR from Qiskit circuits leveraging the [modern QDKs advanced code generation capabilities](https://devblogs.microsoft.com/qsharp/integrated-hybrid-support-in-the-azure-quantum-development-kit/).\n",
         "\n",
-        "This includes support for circuits with classical instructions available in Qiskit such as for loops, if statements, switch statements, while loops, and more."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "a2f48f2b",
-      "metadata": {},
-      "source": [
-        "Import the Q# module.\n",
-        "\n",
-        "This enables the `%%qsharp` magic and initializes a Q# interpreter singleton."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "1e8e4faa",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import qsharp"
+        "This includes support for circuits with classical instructions available in Qiskit such as for loops, if statements, switch statements, while loops, binary expresssions, and more."
       ]
     },
     {
@@ -45,8 +25,10 @@
       "id": "4f761649",
       "metadata": {},
       "source": [
-        "#### Qiskit circuits\n",
-        "We can create a simple circuit with a prepared state."
+        "## Running Qiskit circuits\n",
+        "The `QSharpSimulator` backend is the main class to interact with for running circuits and generating QIR.\n",
+        "\n",
+        "To start, we'll set up a simple circuit with a prepared state."
       ]
     },
     {
@@ -70,6 +52,7 @@
         "circuit.prepare_state([1 / np.sqrt(2), -1 / np.sqrt(2)], 1)\n",
         "circuit.h(1)\n",
         "circuit.measure(1, 1)\n",
+        "\n",
         "circuit.draw(output=\"text\")"
       ]
     },
@@ -78,7 +61,7 @@
       "id": "922f8420",
       "metadata": {},
       "source": [
-        "We can run the circuit Q#'s backend"
+        "With the circuit created, we can run the circuit with Q#'s backend. By default, it will use the `Unrestricted` profile meaning anything it allowed for simulation."
       ]
     },
     {
@@ -101,8 +84,9 @@
       "id": "9c84df75",
       "metadata": {},
       "source": [
-        "#### Parameterized Qiskit circuits\n",
-        "Some circuits require parameters as input. We can create a simple circuit that is parameterized."
+        "## Parameterized Qiskit circuits\n",
+        "\n",
+        "Some circuits require parameters as input. To start, we'll define utility functions to create parameterized circuit(s)."
       ]
     },
     {
@@ -166,7 +150,6 @@
       "source": [
         "from qsharp import QSharpError\n",
         "from qsharp.interop.qiskit import QSharpSimulator\n",
-        "from qiskit.providers import JobStatus\n",
         "\n",
         "circuit = get_parameterized_circuit(3)\n",
         "backend = QSharpSimulator()\n",
@@ -181,7 +164,7 @@
       "id": "ee4d57b4",
       "metadata": {},
       "source": [
-        "Any parameters must be bound before we can run the circuit. This is done by setting the `params` argument to the `run` function."
+        "Any parameters must be bound before we can run the circuit. As we can see from the exception output, we must define the value for the input parameter `θ`. To do this, set the `params` argument to the `run` function."
       ]
     },
     {
@@ -192,15 +175,12 @@
       "outputs": [],
       "source": [
         "from qsharp.interop.qiskit import QSharpSimulator\n",
-        "from qiskit.providers import JobStatus\n",
         "\n",
         "circuit = get_parameterized_circuit(3)\n",
         "backend = QSharpSimulator()\n",
         "# todo: should we support params={\"θ\": \"0.5\"}?\n",
         "job = backend.run(circuit, params=\"0.5\")\n",
-        "result = job.result()\n",
-        "assert job.status() == JobStatus.DONE\n",
-        "counts = result.get_counts()\n",
+        "counts = job.result().get_counts()\n",
         "print(counts)"
       ]
     },
@@ -209,27 +189,8 @@
       "id": "19fe051f",
       "metadata": {},
       "source": [
-        "#### Asychronous jobs"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "70006cc0",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from concurrent.futures import ThreadPoolExecutor\n",
-        "\n",
-        "executor = ThreadPoolExecutor(max_workers=4)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "25d3c35f",
-      "metadata": {},
-      "source": [
-        "Run the circuits"
+        "## Batched simulation\n",
+        "With the foundation layed for parameterized circuits, we can create a list of circuits varying the input angle of rotation and run all circuits together, aggretating their results."
       ]
     },
     {
@@ -244,8 +205,8 @@
         "circuits = get_parameterized_circuits(5, theta_range)\n",
         "\n",
         "backend = QSharpSimulator()\n",
-        "job = backend.run(circuits, executor=executor)\n",
-        "job.wait_for_final_state(wait=0.5)\n",
+        "job = backend.run(circuits)\n",
+        "job.wait_for_final_state(wait=0.2, callback=lambda _id, _status, _job: print(\".\", end=\"\"))\n",
         "result = job.result()\n",
         "print(job.status())\n",
         "counts = job.result().get_counts()"
@@ -332,6 +293,7 @@
         "        qc.z(1)\n",
         "    with case(case.DEFAULT):\n",
         "        qc.cx(0, 1)\n",
+        "qc.measure_all(add_bits=False)\n",
         "\n",
         "backend = QSharpSimulator()\n",
         "\n",
@@ -358,6 +320,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "97184460",
+      "metadata": {},
+      "source": [
+        "Not all programs can run on all hardware. Here we can try to target the `Base` profile, but we will get detailed errors on which parts of the program aren't supported."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "06c31a67",
@@ -372,47 +342,17 @@
     },
     {
       "cell_type": "markdown",
-      "id": "6658a413",
-      "metadata": {},
-      "source": [
-        "### Run Qiskit circuit in new interpreter\n",
-        "The `run_qiskit` function can execute a qiskit circuit as a program using the output semantics of OpenQASM 3.0 (the circuit is converted to qasm3 before execution)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "5493d379",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from qiskit import QuantumCircuit\n",
-        "\n",
-        "def ghz():\n",
-        "    circuit = QuantumCircuit(4, 3)\n",
-        "    circuit.name = \"Qiskit Sample - 3-qubit GHZ circuit\"\n",
-        "    circuit.h(0)\n",
-        "    circuit.cx(0, 1)\n",
-        "    circuit.cx(1, 2)\n",
-        "    circuit.measure([2, 1, 0], [1, 0, 2])\n",
-        "    return circuit\n",
-        "\n",
-        "\n",
-        "circuit = ghz()\n",
-        "print(circuit.draw(output=\"text\"))\n",
-        "print(QSharpSimulator().run(circuit).result().get_counts())"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "b06b7857",
       "metadata": {},
       "source": [
         "## Errors\n",
-        "### Parse errors\n",
-        "Parse are exceptions. \n",
         "\n",
-        "We can catch and handle parse errors prior to compilation."
+        "### Unsupported language features, `QiskitError`, `QasmError`, and `QSharpError`\n",
+        "The modern QDK's interop with Qiskit is based on Qiskit's OpenQASM 3 support. Qiskit supports a subset of OpenQASM 3 features which may cause issues during conversion. If the Qiskit OpenQASM `Exporter` or OpenQASM parser don't support the feauture yet, a `QiskitError` is raised prior to conversion. If there is a QASM parsing failure, this is likely an issue with the Qiskit libraries parsing or export functionality.\n",
+        "\n",
+        "Any failure to transform the OpenQASM into Q#'s internal representation will throw a `QasmError` to distinguish the scenarios. This is most likely due to a semantically invalid OpenQASM program as input\n",
+        "\n",
+        "If the program can't be compiled to QIR, has invalid input bindings, or encounters a runtime error, a `QSharpError` is raised."
       ]
     },
     {
@@ -425,7 +365,7 @@
         "from qsharp.interop import QasmError, QiskitError\n",
         "\n",
         "try:\n",
-        "\n",
+        "    # TODO:\n",
         "except QiskitError as ex:\n",
         "    print(ex)"
       ]
@@ -435,10 +375,10 @@
       "id": "00f82a16",
       "metadata": {},
       "source": [
-        "### Runtime Errors\n",
-        "We can also catch and handle runtime errors, mapping the error back to the original code.\n",
+        "### Semantic Errors\n",
+        "It is still possible to create circuits that are semantically invalid. These will raise `QasmErrors` as the OpenQASM can't be compiled.\n",
         "\n",
-        "Here we'll run an example which tries to access the fifth element in an array with only two elements."
+        "For example, creating a circuit without any output:"
       ]
     },
     {
@@ -450,7 +390,6 @@
       "source": [
         "from qsharp import QSharpError\n",
         "from qsharp.interop import QasmError\n",
-        "\n",
         "\n",
         "try:\n",
         "    circuit = QuantumCircuit(2)\n",
@@ -481,42 +420,12 @@
         "circuit.measure(0, 1)\n",
         "backend = QSharpSimulator()\n",
         "try:\n",
-        "    # TODO: the error message is incorrect:\n",
+        "    # TODO: the error message is incorrect, but the error is correct:\n",
         "    # Unsupported target profile. Initialize Q# by running `qsharp.init(target_profile=qsharp.TargetProfile.Base)` before performing code generation.\n",
         "    print(backend.qir(circuit))\n",
         "except QSharpError as ex:\n",
-        "    print(ex)\n",
-        "\n",
-        "print(\"Trying again with adaptive profile\")\n",
-        "print(backend.qir(circuit, target_profile=TargetProfile.Adaptive_RI))"
+        "    print(ex)"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "3e294471",
-      "metadata": {},
-      "source": [
-        "A runtime error that's not caught gets reported as a Python exception."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "4f0e9042",
-      "metadata": {},
-      "source": [
-        "#### Unsupported language features, `QasmError`, and `QSharpError`\n",
-        "The modern QDK's interop with Qiskit is based on Qiskit's OpenQASM 3 support. Qiskit supports a subset of OpenQASM 3 features which may cause issues during conversion. If the Qiskit OpenQasm `Exporter` or OpenQasm parser don't support the feauture yet, a `QasmError` is raised prior to conversion. If there is a QASM parsing failure, this is likely an issue with the Qiskit libraries parsing or export functionality.\n",
-        "\n",
-        "Any failure to transform the OpenQASM into Q#'s internal representation will throw a `QSharpError` to distinguish the scenarios."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ced2c6b8",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
