--- a/samples/python_interop/qiskit/interop.ipynb
+++ b/samples/python_interop/qiskit/interop.ipynb
@@ -169,17 +169,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "id": "d9bb3eb0",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'1': 922, '0': 102}\n"
+          ]
+        }
+      ],
       "source": [
         "from qsharp.interop.qiskit import QSharpSimulator\n",
         "\n",
         "circuit = get_parameterized_circuit(3)\n",
         "backend = QSharpSimulator()\n",
-        "# todo: should we support params={\"θ\": \"0.5\"}?\n",
-        "job = backend.run(circuit, params=\"0.5\")\n",
+        "# todo:\n",
+        "# - should we support params={\"θ\": \"0.5\"}?\n",
+        "# - should we support params=\"0.5\"?\n",
+        "# - I think it's better to use the assign_parameters method and drop this\n",
+        "#       param support altogether. This way we only have one way to do it.\n",
+        "# job = backend.run(circuit, params=\"0.5\")\n",
+        "\n",
+        "circuit.assign_parameters(\n",
+        "    {\"θ\": \"0.5\"},\n",
+        "    inplace=True,\n",
+        ")\n",
+        "job = backend.run(circuit)\n",
         "counts = job.result().get_counts()\n",
         "print(counts)"
       ]
